# Agent-Rep

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  package.json  pyproject.toml
infra/: main.tf  outputs.tf  providers.tf  variables.tf
portfolio/: robots.txt
scripts/: build-static.sh  deploy.sh  optimize-svg.sh  reembed.py  seed_repo_metadata.py  svgo.config.mjs
src/: app.py
src/config/: settings.py
src/core/: __init__.py  claude_chat_client.py  client_factory.py  db.py  logger.py  neo4j_client.py  nim_client.py  voyage_client.py
src/ingestion/: cli.py  code_parser.py  context_generator.py  graph_builder.py  resume_parser.py  retag_skills.py  skill_classifier.py  skill_extractor.py  skill_taxonomy.py
src/jd_match/: __init__.py  agent.py  extract.py  matcher.py  parser.py
src/qa/: __init__.py  agent.py  tools.py
src/static/: background.svg.br  chat.js  chat.min.js  d3-bundle.js  d3.custom.min.js  fingerprint.js  fingerprint.min.js  graph.js  graph.min.js  jd.js  jd.min.js  repo-tiles.js  repo-tiles.min.js  style.css  style.min.css
src/templates/: index.html  skill.html
src/ui/: competency_map.py
tests/: test_api_repos.py  test_claude_chat_client.py  test_db.py  test_ingestion.py  test_jd_match.py  test_qa.py
tests/e2e/: conftest.py  test_cross_browser.py  test_iphone15_safari.py  test_mobile_exhibits_strip.py  test_mobile_interactions.py  test_mobile_layout.py
tests/fixtures/: sample.js  sample.py  (+1 more)
